<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlashMan</string>
    <string name="menu_settings">Settings</string>
    <string name="full ">Full </string>
    <string name="take">Take </string>
    <string name="parking">停车场</string>
    <string name="gas_station">加油站 </string>
    <string name="bank">银行</string>
    <string name="sport">体育馆 </string>
    <string name="cafe">咖啡馆</string>
    <string name="food">餐厅</string>
    <string name="car_repair">汽修店 </string>
    <string name="car_dealer">4S店 </string>
    <string name="car_route">行车路线 </string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="search">查询</string>
    <string name="search_today">查询今天</string>
    <string name="clean">清除</string>
    <string name="setup">设置</string>
    <string name="sure_clean">确定要清除数据吗?</string>
    <string name="key_word">搜索内容</string>
    <string name="one_km">1公里范围内</string>
    <string name="choice_city">选择你要下载的城市</string>
    <string name="skip">跳过</string>
    <string name="province">省份:</string>
    <string name="city">市区:</string>
	<string name="hot_city">热门城市:</string>
	<string name="download_province">按省份下载</string>
	<string name="download">下载</string>
	<string name="download_success">数据下载成功</string>
	<string name="unzip">解压数据</string>
	<string name="getting_location">正在获取位置</string>
	<string name="download_offline_map">离线地图</string>
	<string name="set_default_city">设置你的默认城市</string>
	<string name="sure_send_position">确定发送你的位置给:%1$s吗?</string>
	<string name="sms_from">^_^ 来自:&lt;u>%1$s&lt;/u>的位置信息,是否查看?</string>
	<string name="im_here">我在这里</string>
	<string name="fav_name">名称</string>
	<string name="fav_describe">描述</string>
	<string name="fav_point">收藏当前位置</string>
	<string name="fav_point_delete">删除</string>
	<string name="bus_start_time">首发时间:</string>
	<string name="bus_end_time">末班时间:</string>
	<string name="bus_front_name">始发站:</string>
	<string name="bus_terminal_name">终点站:</string>
	<string name="bus_length">全程%1$f公里</string>
	<string name="bus_basic_price">起步价:%1$.2f元</string>
	<string name="bus_total_price">全程价:%1$.2f元</string>
	<string name="loading_data">正在加载数据&#8230;</string>
</resources>