<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/parking"
                    style="@style/Button_Style"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginLeft="@dimen/button_marginLeft"
                    android:drawableTop="@drawable/parking"
                    android:onClick="onClick"
                    android:paddingTop="@dimen/button_drawablePadding"
                    android:text="@string/parking" />

                <Button
                    android:id="@+id/gas_station"
                    style="@style/Button_Style"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginLeft="@dimen/button_marginLeft"
                    android:drawableTop="@drawable/gas"
                    android:onClick="onClick"
                    android:paddingTop="@dimen/button_drawablePadding"
                    android:text="@string/gas_station" />

                <Button
                    android:id="@+id/food"
                    style="@style/Button_Style"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginLeft="@dimen/button_marginLeft"
                    android:drawableTop="@drawable/food"
                    android:onClick="onClick"
                    android:paddingTop="@dimen/button_drawablePadding"
                    android:text="@string/food" />
                
                <Button
                    android:id="@+id/car_repair"
                    style="@style/Button_Style"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginLeft="@dimen/button_marginLeft"
                    android:drawableTop="@drawable/car_repair"
                    android:onClick="onClick"
                    android:paddingTop="@dimen/button_drawablePadding"
                    android:text="@string/car_repair" />

                
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/bank"
                    style="@style/Button_Style"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginLeft="@dimen/button_marginLeft"
                    android:drawableTop="@drawable/bank"
                    android:onClick="onClick"
                    android:paddingTop="@dimen/button_drawablePadding"
                    android:text="@string/bank" />

                 <Button
                    android:id="@+id/car_dealer"
                    style="@style/Button_Style"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginLeft="@dimen/button_marginLeft"
                    android:drawableTop="@drawable/car_wash"
                    android:onClick="onClick"
                    android:paddingTop="@dimen/button_drawablePadding"
                    android:text="@string/car_dealer" 
                    />
                 
                <Button
                    android:id="@+id/sport"
                    style="@style/Button_Style"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginLeft="@dimen/button_marginLeft"
                    android:drawableTop="@drawable/sport"
                    android:onClick="onClick"
                    android:paddingTop="@dimen/button_drawablePadding"
                    android:text="@string/sport" 
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/cafe"
                    style="@style/Button_Style"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginLeft="@dimen/button_marginLeft"
                    android:drawableTop="@drawable/coffee"
                    android:onClick="onClick"
                    android:paddingTop="@dimen/button_drawablePadding"
                    android:text="@string/cafe" />
                
                <Button
                    android:id="@+id/car_route"
                    style="@style/Button_Style"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginLeft="@dimen/button_marginLeft"
                    android:drawableTop="@drawable/route"
                    android:onClick="onClick"
                    android:paddingTop="@dimen/button_drawablePadding"
                    android:text="@string/car_route" 
                    />
                
                 <Button
                    android:id="@+id/car_wash"
                    style="@style/Button_Style"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginLeft="@dimen/button_marginLeft"
                    android:drawableTop="@drawable/car_wash"
                    android:onClick="onClick"
                    android:paddingTop="@dimen/button_drawablePadding"
                    android:text="Car Wash" 
                    android:visibility="gone"/>

                
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>