<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="@drawable/bg_title_mapsearch"
        >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_cal_del_one"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/bus_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="7dp"
            android:textAppearance="?android:attr/textAppearanceSmall" 
            />
        
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BusLine_View_Style"
                android:text="@string/bus_front_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/bus_front_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BusLine_View_Style"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BusLine_View_Style"
                android:text="@string/bus_terminal_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/bus_terminal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BusLine_View_Style"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BusLine_View_Style"
                android:text="@string/bus_start_time"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/bus_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BusLine_View_Style"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BusLine_View_Style"
                android:text="@string/bus_end_time"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/bus_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BusLine_View_Style"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/bus_basic_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BusLine_View_Style"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/bus_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BusLine_View_Style"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

           
            <TextView
                android:id="@+id/bus_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BusLine_View_Style"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

    </LinearLayout>
    <ListView android:id="@+id/bus_stations" 
        android:layout_width="match_parent"
                android:layout_height="match_parent">
        
    </ListView>

</LinearLayout>